--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "tech-challenge-front": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
